# opentoy

./: .gitignore  README.md  pyproject.toml
src/: asr.py  llm.py  mic.py  player.py  server.py  tts.py  utils.py  vad.py
src_web/: README.md  config.py  index.html  server.py
src_web/asr/: sensevoice.py
src_web/llm/: qwen_plus.py
src_web/tts/: cosyvoice.py
src_web/vad/: fsmn_vad.py
