[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opentoy"
version = "0.1.0"
description = "Real-time audio streaming with Opus encoding over WebSocket"
requires-python = ">=3.8"
dependencies = [
    "pyaudio>=0.2.13",
    "opuslib>=3.0.1",
    "websockets>=11.0.3",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.0.291",
]

[tool.ruff]
line-length = 88
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]